# iftpfm2

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.sftp_test  LICENSE  Makefile  README.md  TODO.md  codereview.md  migrate_csv_to_jsonl.rs  sample.csv  sample.jsonl  test.sh  test_age.sh  test_conn_timeout.sh  test_ftps.sh  test_pid.sh  test_pid_no_xdg.sh  test_ram_threshold.sh  test_sftp_docker.sh  test_sftp_keys_docker.sh  test_sftp_timeout.sh  test_temp_dir.sh  todo.md
.claude/commands/: bump-version.md  test.md
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/iftpfm2/: all.html  constant.PROGRAM_NAME.html  constant.PROGRAM_VERSION.html  fn.check_single_instance.html  fn.cleanup_lock_file.html  fn.is_shutdown_requested.html  fn.log.html  fn.log_with_thread.html  fn.main.html  fn.parse_args.html  fn.parse_config.html  fn.print_usage.html  fn.request_shutdown.html  fn.set_log_file.html  fn.signal_process_to_terminate.html  fn.transfer_files.html  index.html  sidebar-items.js  static.LOG_FILE.html  static.SHUTDOWN_REQUESTED.html  struct.Config.html
doc/migrate_csv_to_jsonl/: all.html  fn.main.html  index.html
doc/search.index/: 014d9511af19.js  0417d7b24247.js  04e2671b61e1.js  06db6d944604.js  085605cc1828.js  10008f794bc8.js  14f853907ed0.js  164744e482c2.js  19f666e718bd.js  1fb84de30f0b.js  26c85a5c188b.js  293ae3a18c0d.js  2a3f751173eb.js  2a9c385b08c1.js  2b518fe0df65.js  2ba6ea7b4ce4.js  2c80c80c9bf7.js  2cda264ca2dc.js  30e48f3c999c.js  311c66759073.js  (+32 more)
src/: args.rs  cli.rs  conf.rs  config.rs  ftp_ops.rs  instance.rs  lib.rs  log.rs  logging.rs  main.rs  repomix-output.xml  shutdown.rs  transf.rs
(+123 files in other folders)
