[package]
name = "iftpfm2"
version = "2.0.5"
authors = ["Roman V. Isaev <rm@aroma.ru>"]
edition = "2021"

[lib]
name = "iftpfm2"

[dependencies]
csv = "1.1.6"
chrono = "0.4.23"
tempfile = "3.3.0"
ftp = "3.0.1"
time = "0.3.17"
regex = "1.7.0"
once_cell = "1.17.1"
rayon = "1.8"
scopeguard = "1.2.0"
rand = "0.8.5"
ctrlc = "3.4.7"
