[package]
name = "iftpfm2"
version = "2.1.1"
authors = ["Roman V. Isaev <rm@aroma.ru>"]
edition = "2021"

[lib]
name = "iftpfm2"

[dependencies]
chrono = "0.4.23"
tempfile = "3.3.0"
suppaftp = { version = "6", features = ["native-tls"] }
time = "0.3.17"
regex = "1.7.0"
once_cell = "1.17.1"
rayon = "1.8"
scopeguard = "1.2.0"
rand = "0.8.5"
ctrlc = "3.4.7"
fs2 = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serial_test = "3.0"

[[bin]]
name = "migrate_csv_to_jsonl"
path = "migrate_csv_to_jsonl.rs"
