[package]
name = "iftpfm2"
version = "2.2.1"
authors = ["Roman V. Isaev <rm@aroma.ru>"]
edition = "2021"

[lib]
name = "iftpfm2"

[dependencies]
chrono = "0.4"
tempfile = "3"
suppaftp = { version = "8", features = ["rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-native-certs = "0.8"
time = "0.3"
regex = "1"
once_cell = "1"
rayon = "1"
scopeguard = "1"
rand = "0.8"
signal-hook = "0.3"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = "1"

[dev-dependencies]
serial_test = "3.0"

[[bin]]
name = "migrate_csv_to_jsonl"
path = "migrate_csv_to_jsonl.rs"
